--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "wrapper"
   ],
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cj-larsen/kroger-api-wrapper"
+  },
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
     "build": "tsc",
