moves index.ts and adds files to package.json

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "wrapper"
   ],
   "license": "MIT",
+  "files": [
+    "lib/"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/cj-larsen/kroger-api-wrapper"
